<resources>
    <string name="app_name">Fake Call</string>
    <string name="title_activity_main">Home</string>
    <string name="fab_call">Call</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonStar">*</string>
    <string name="buttonSharp">#</string>
    <string name="call">Call</string>
    <string name="madagascar">madagascar</string>
    <string name="empty_text"></string>
    <string name="more">more</string>
    <string name="remove">remove</string>
    <string name="add">Add</string>
    <string name="voiceResponse">Voice response</string>
    <string name="check">Check</string>

    <string name="preference_file_key">com.devlogger.fakecall.PREFERENCE_FILE</string>
    <string name="voice_selected_key">com.devlogger.fakecall.VOICE_SELECTED</string>
</resources>